# id3tovorbis

./: .autotools  .cproject  .gitignore  .project  Makefile.am  NEWS  README.md  configure.ac  doxygen.config  myclean.sh  myconfigure.sh
m4/: taglib.m4
src/: Makefile.am  decode.c  id3tovorbis.c  id3tovorbis.cpp  transcoder.cpp  transcoder.h  types.h
tests/: Makefile.am  audio_sample.flac  audio_sample_m4a.m4a  audio_test_id3.m4a  test.cpp  test.h  test_decode.cpp  test_decode_id3.cpp  test_decode_vorbis.cpp  test_print.cpp
